exports[`CartContainer > Lifecycle functions accepts query string and calls addTransaction with the right info 1`] = `
<CartContainer
  accounts={
    Array [
      Object {
        "id": "1",
        "name": "test",
      },
    ]
  }
  addTransactions={[Function]}
  clearTransactions={[Function]}
  give="5">
  <Layout
    accounts={
      Array [
        Object {
          "label": "test",
          "value": "1",
        },
      ]
    }
    format={[Function]}
    preFill={[Function]}
    save={[Function]}
    transactions={Object {}}>
    <div
      className="push-top@handheld soft-half-top@lap-and-up">
      <Form
        classes={
          Array [
            "text-left",
            "hard",
          ]
        }
        id="add-to-cart"
        submit={[Function]}>
        <form
          className="hard-ends text-left hard"
          id="add-to-cart"
          onSubmit={[Function]}>
          <FieldSet>
            <fieldset
              className="flush-bottom">
              <div
                className="display-inline-block">
                <mockConstructor
                  accounts={
                    Array [
                      Object {
                        "label": "test",
                        "value": "1",
                      },
                    ]
                  }
                  instance={0}
                  preFill={[Function]}
                  primary={true}
                  remove={[Function]}
                  update={[Function]}>
                  <div />
                </mockConstructor>
                <h3
                  className="display-inline-block text-dark-tertiary push-half-bottom push-half-right">
                  so my total is
                </h3>
                <h3
                  className="display-inline-block text-brand push-half-bottom">
                  $0.00
                </h3>
              </div>
              <div
                className="push-top">
                <mockConstructor
                  disabled={false}>
                  <div />
                </mockConstructor>
              </div>
            </fieldset>
          </FieldSet>
        </form>
      </Form>
    </div>
  </Layout>
</CartContainer>
`;

exports[`test should not render if no accounts 1`] = `
<CartContainer
  accounts={Array []}
  addTransactions={[Function]}
  clearTransactions={[Function]}
  give="5" />
`;

exports[`test should properly render with multiple accounts 1`] = `
<CartContainer
  accounts={
    Array [
      Object {
        "id": 1,
        "name": "TEST 1",
      },
      Object {
        "id": 2,
        "name": "TEST 2",
      },
      Object {
        "id": 3,
        "name": "TEST 3",
      },
      Object {
        "id": 4,
        "name": "TEST 4",
      },
    ]
  }
  addTransactions={[Function]}
  clearTransactions={[Function]}
  give="5">
  <Layout
    accounts={
      Array [
        Object {
          "label": "TEST 1",
          "value": 1,
        },
        Object {
          "label": "TEST 2",
          "value": 2,
        },
        Object {
          "label": "TEST 3",
          "value": 3,
        },
        Object {
          "label": "TEST 4",
          "value": 4,
        },
      ]
    }
    format={[Function]}
    preFill={[Function]}
    save={[Function]}
    transactions={Object {}}>
    <div
      className="push-top@handheld soft-half-top@lap-and-up">
      <Form
        classes={
          Array [
            "text-left",
            "hard",
          ]
        }
        id="add-to-cart"
        submit={[Function]}>
        <form
          className="hard-ends text-left hard"
          id="add-to-cart"
          onSubmit={[Function]}>
          <FieldSet>
            <fieldset
              className="flush-bottom">
              <div
                className="display-inline-block">
                <mockConstructor
                  accounts={
                    Array [
                      Object {
                        "label": "TEST 1",
                        "value": 1,
                      },
                      Object {
                        "label": "TEST 2",
                        "value": 2,
                      },
                      Object {
                        "label": "TEST 3",
                        "value": 3,
                      },
                      Object {
                        "label": "TEST 4",
                        "value": 4,
                      },
                    ]
                  }
                  instance={0}
                  preFill={[Function]}
                  primary={true}
                  remove={[Function]}
                  update={[Function]}>
                  <div />
                </mockConstructor>
                <h3
                  className="display-inline-block text-dark-tertiary push-half-bottom push-half-right">
                  so my total is
                </h3>
                <h3
                  className="display-inline-block text-brand push-half-bottom">
                  $0.00
                </h3>
              </div>
              <div
                className="push-top">
                <mockConstructor
                  disabled={false}>
                  <div />
                </mockConstructor>
              </div>
            </fieldset>
          </FieldSet>
        </form>
      </Form>
    </div>
  </Layout>
</CartContainer>
`;

exports[`test should render with minimal props 1`] = `
<Layout
  accounts={
    Array [
      Object {
        "label": "test",
        "value": "1",
      },
    ]
  }
  format={[Function]}
  preFill={[Function]}
  save={[Function]}
  transactions={Object {}} />
`;
